--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/favicon.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -19,15 +19,15 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio - v2.0.3
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" height="100%" width="100%" class="img-fluid" alt="">
+            <img src="/assets/img/profile-img.jpg" height="100%" width="100%" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Personal information.</h3>
@@ -198,7 +198,7 @@
               <h4>Jean-Pierre van Zyl</h4>
               <p><em>Brief overview of experience</em></p>
               <ul>
-                <li><a href="assets/documents/jeanpierrevanzyl_cv.pdf" target="_blank">Download CV</a></li>
+                <li><a href="/assets/documents/jeanpierrevanzyl_cv.pdf" target="_blank">Download CV</a></li>
                 <li>Currently hold BSc (Hons) in Computer Science</li>
                 <li>Work experience consists of multiple internships</li>
                 <li>Multiple years spent serving on student leadership</li>
@@ -223,7 +223,7 @@
                 <li><a id="honours-hyperlink" href="javascript:hideshowHonours();">View Degree</a></li>
               </ul>
               <div id="honours-hidden-div" class="hidden-div">
-                <img src="assets/img/honours.png" class="img-fluid" alt="">
+                <img src="/assets/img/honours.png" class="img-fluid" alt="">
               </div>
             </div>
             <div class="resume-item">
@@ -235,7 +235,7 @@
                 <li><a id="undergrad-hyperlink" href="javascript:hideshowUndergrad();">View Degree</a></li>
               </ul>
               <div id="undergrad-hidden-div" class="hidden-div">
-                <img src="assets/img/undergrad.png" class="img-fluid" alt="">
+                <img src="/assets/img/undergrad.png" class="img-fluid" alt="">
               </div>
             </div>
             <div class="resume-item">
@@ -356,7 +356,7 @@
           <!-- Start Publications -->
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bxs-book"></i></div>
-            <h4 class="title"><a href="assets/documents/RiSBPSO.pdf" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
+            <h4 class="title"><a href="/assets/documents/RiSBPSO.pdf" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
             <p class="description">
               The SBPSO algorithm was successfully applied to induce rule sets on categorical data to allow for transparent classification for critical industries.
               This work has been published at the <a href="https://wcci2022.org/" target="_blank">IEEE World Congress On Computational Intelligence (2022)</a>.
@@ -365,7 +365,7 @@
 
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-book"></i></div>
-            <h4 class="title"><a href="assets/documents/SBPSO_for_polynomial_induction.pdf" target="_blank">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
+            <h4 class="title"><a href="/assets/documents/SBPSO_for_polynomial_induction.pdf" target="_blank">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
             <p class="description">The SBPSO is an adaptation of the standard PSO for problems in a discrete search
               space.
               This algorithm was applied to solve regression problems and published for the <a href="http://www.iasei.org/icsi2021/" target="_blank">International Conference on Swarm Intelligence (2021)</a>.
@@ -427,99 +427,99 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finance">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Stonks"><i class="bx bx-plus"></i></a>
-                <a href="luxor-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/luxor-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-afrikaans">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-xournalpp/background.png" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-xournalpp/background.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-xournalpp/background.png" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-xournalpp/background.png" data-gall="portfolioGallery" class="venobox"
                   title="Xournal++"><i class="bx bx-plus"></i></a>
-                <a href="xournalpp-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/xournalpp-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
           <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox"
                   title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
                   title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="/assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="html/portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -620,24 +620,24 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="/assets/vendor/counterup/counterup.min.js"></script>
+  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="/assets/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
   <script>
-    $("#header").load("header.html");
-    $("#footer").load("footer.html");
+    $("#header").load("/html/header.html");
+    $("#footer").load("/html/footer.html");
   </script>
 
 </body>
